[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biomodels_restful_ws_tnguyenv"
version = "0.0.2"
authors = [
  { name="Tung Nguyen", email="nvntung@gmail.com" },
]
description = "BioModels RESTful Web Services"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"